Fixed some spacing issues

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -20,7 +20,7 @@ Each system \system\ will output some estimation \systemtruth\ of the truth
 \truth.
 This will be done by allowing the set of agents belonging to \system,
 known as \systemagents, to observe \truth\ and provide their
-own estimation \agenttruth, where \agent is an individual agent.
+own estimation \agenttruth, where \agent\ is an individual agent.
 These estimations will then be compiled into \systemtruth\ using
 the system's \hyperref[subsec:voting-mechanisms]{voting mechanism}.
 An agent need not provide the same \agenttruth\ for the same \truth,
@@ -136,7 +136,7 @@ The total cost of a system \systemcost\ is calculated as
     }
     \text{,}\label{eq:cost}
 \end{equation}
-where \agentcost is the cost of an agent.
+where \agentcost\ is the cost of an agent.
 This cost is an arbitrary value of an arbitrary unit which accounts for time,
 monetary cost, or any other cost the measuring technique requires.
 While in reality there may be some fluctuation in cost for the same
@@ -194,7 +194,7 @@ in~\autoref{tab:voting-distributions}.
 These distributions, combined with the extent, have a large influence on the
 agent's ability to measure \truth.
 
-Finally, each agent has a cost \agentcost associated with it.
+Finally, each agent has a cost \agentcost\ associated with it.
 This cost is an arbitrary unit used to represent the monetary cost, time
 required, and/or any other value required by the agent.
 The cost can be assigned or reassigned at any time before calculating the
