--- a/util.sty
+++ b/util.sty
@@ -10,3 +10,5 @@
 
 % Source: https://tex.stackexchange.com/a/100930
 \newcommand*{\getcurrentindex}{\number\numexpr\value{enumi}\relax}
+
+\newcommand*{\paragraphbf}[1]{\paragraph{\textbf{#1}}}
