Fixed weighting mechanism link

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -355,7 +355,7 @@ steps.
     should be more accurate.
 
     \titleditem{Assign weights to proxies}
-    Using the given \hyperref[subsec:weight-mechanisms]{weighting mechanism},
+    Using the given \hyperref[subsec:weighting-mechanisms]{weighting mechanism},
     each inactive voter will apply weights to one or more proxies.
     The system will sum these weights to get a total weight for each proxy.
 
