--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -233,7 +233,7 @@ mechanisms and average mechanisms.
 This study experiments with a number of candidate mechanisms, which are
 described below.
 
-\paragraphbf{Median}
+\mechanismheader{Median}
 The median mechanism is one of the mechanisms used in~\cite{Cohensius2017}.
 This study build off their by using finite voters instead of infinite, as
 well as applying weighting mechanisms which will result in different results.
@@ -264,7 +264,7 @@ as described with
 \end{equation}
 where \systemagents\ is ordered by \agenttruth.
 
-\paragraphbf{Plurality}
+\mechanismheader{Plurality}
 The plurality mechanism selects the proxy with the highest weight.
 It is described by
 \begin{equation}
