--- a/util.sty
+++ b/util.sty
@@ -11,4 +11,4 @@
 % Source: https://tex.stackexchange.com/a/100930
 \newcommand*{\getcurrentindex}{\number\numexpr\value{enumi}\relax}
 
-\newcommand*{\paragraphbf}[1]{\paragraph{\textbf{#1}}}
+\newcommand*{\mechanismheader}[1]{\paragraph{\textbf{\textit{#1}}}}
