Fixed plurality equation

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -269,7 +269,7 @@ The plurality mechanism selects the proxy with the highest weight.
 It is described by
 \begin{equation}
     \textbf{pl}(\systemagents) =
-    \max \weightof{\systemagents}
+    \argmax \weightof{\systemagents}
     \text{,}\label{eq:plurality-mechanism}
 \end{equation}
 meaning the agent with the maximum weight.
