--- a/util.sty
+++ b/util.sty
@@ -12,3 +12,6 @@
 \newcommand*{\getcurrentindex}{\number\numexpr\value{enumi}\relax}
 
 \newcommand*{\mechanismheader}[1]{\paragraph{\textbf{\textit{#1}}}}
+
+\DeclareMathOperator*{\argmax}{\arg\max}
+\DeclareMathOperator*{\argmin}{\arg\min}
