Changed notation table name

--- a/content/frontmatter/notation.tex
+++ b/content/frontmatter/notation.tex
@@ -11,7 +11,7 @@
 \setlength{\tabcolsep}{3mm}{
     % TODO: Alphabetize these by symbol
     \begin{tabular}{ll}
-        \notationheader{Equations}
+        \notationheader{Variables and Functions}
         \notationdesc{\agent}{An individual agent}
         \notationdesc{\agentcost}{The cost of using an individual agent}
         \notationdesc{\agents}{The set of all agents}
