--- a/notations.sty
+++ b/notations.sty
@@ -24,6 +24,7 @@ type them, reducing mistakes and making it easier to change them.]
 \@newnotation*{\cost}{\mathbb{C}}
 \@newnotation*{\loss}{\mathbb{L}}
 \@newnotation*{\mean}{\mu}
+\@newnotation*{\proxies}{\mathbb{P}}
 \@newnotation*{\real}{\mathbb{R}}
 \@newnotation*{\stddeviation}{\sigma}
 \@newnotation*{\system}{\mathbb{S}}
@@ -38,6 +39,7 @@ type them, reducing mistakes and making it easier to change them.]
 \@newnotation*{\systemagents}{\system_\agents}
 \@newnotation*{\systemcost}{\costof{\system}}
 \@newnotation*{\systemloss}{\lossof{\system}}
+\@newnotation*{\systemproxies}{\system_\proxies}
 \@newnotation*{\systemtruth}{\truthof{\system}}
 \@newnotation*{\systemweight}{\weightof{\system}}
 
