Minor phrasing changes

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -237,9 +237,9 @@ described below.
 The median mechanism is one of the mechanisms used in~\cite{Cohensius2017}.
 This study build off their by using finite voters instead of infinite, as
 well as applying weighting mechanisms which will result in different results.
-The median mechanism is the same as the one used in~\cite[para.~2
-.4]{Cohensius2017},
-and is described, with some symbolic changes, as
+The formula for the median mechanism is the same as the one used
+in~\cite[para.~2.4]{Cohensius2017}, which was described as, with some
+symbolic changes,
 \begin{equation*}
     \textbf{md}(\systemproxies) =
     \min\left\{\agent_i \in \systemproxies \text{ s.t. }
