--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -295,7 +295,7 @@ time that proxy is selected as \systemtruth.
 
 \mechanismheader{Weighted Instant Runoff}
 \label{para:candidate-weighted-instant-runoff}
-The weighted instant runoff mechanism is the same as instant runoff, but uses
+The weighted instant runoff mechanism works the same as instant runoff, but uses
 the weights provided by each agent instead.
 Since it is possible that a weighting mechanism will not provide second or
 third choices, the agents whose choice is eliminated will need to
