--- a/thesis.tex
+++ b/thesis.tex
@@ -81,11 +81,12 @@
 % manuscript by using \doi{}.
 \usepackage{doi}
 
-\usepackage{enumitem}  % MDH: Used for more controls over `enumerate`
-\usepackage{amsmath}  % MDH: For math fonts
+\usepackage{enumitem} % MDH: Used for more controls over `enumerate`
+\usepackage{amsmath} % MDH: For math functions
+\usepackage{amsfonts} % MDH: For math fonts
 
-\usepackage{util}  % MDH: Contains my custom commands
-\usepackage{notations}  % MDH: So I don't have to repeat myself so much
+\usepackage{util} % MDH: Contains my custom commands
+\usepackage{notations} % MDH: So I don't have to repeat myself so much
 
 % Set spacing around figures and tables to triple space
 \setlength{\intextsep}{2em} % Vertical space above & below [h] floats
