Explained difference between Borda and Distance Voting

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -381,7 +381,8 @@ The Borda mechanism allows each inactive voter to weight each proxy.
 Each proxy is rated some value in $[1 \mathellipsis n]$, with the closest
 given $n$ and the furthest $1$.
 These values are used as the weights for whichever voting mechanism is used.
-
+This should results in something similar to distance voting, but with
+a set range of scores.
 
 \section{Experiment Design}\label{sec:experiment-design}
 % TODO: I don't currently have anything in here about agents with different
